<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="gamepad" type="id" />
    <item name="game_surface" type="id" />
    <item name="pause_button" type="id" />
    <item name="pause_layer" type="id" />
    <item name="pause_scrim" type="id" />
    <item name="pause_drawer" type="id" />
    <item name="pause_continue" type="id" />
    <item name="pause_game_title" type="id" />
    <item name="pause_game_center" type="id" />
    <item name="pause_settings" type="id" />
    <item name="haptic_off" type="id" />
    <item name="haptic_light" type="id" />
    <item name="haptic_standard" type="id" />
...
    <item name="nearby_ingame_banner_row_authority_timeout" type="id" />
    <item name="nearby_ingame_banner_row_takeover" type="id" />
    <item name="nearby_ingame_banner_row_continue_solo" type="id" />
    <item name="nearby_ingame_banner_row_save_and_end" type="id" />
    <item name="nearby_lobby_details" type="id" />
    <item name="nearby_lobby_details_rows" type="id" />
    <item name="pause_history" type="id" />
    <item name="pause_save" type="id" />
    <item name="pause_restart" type="id" />
    <item name="pause_save_interval" type="id" />
</resources>

