...
    <string name="nearby_reason_content_sendDenied">The other side did not allow sending files</string>
    <string name="nearby_reason_content_receiveDenied">The other side did not allow receiving files</string>
    <string name="nearby_not_supported">Not supported yet</string>
    <string name="nearby_qr_unavailable">No active invite</string>
    <string name="nearby_details_previous">Previous</string>
    <string name="nearby_details_next">Next</string>
    <string name="history_title">Save history</string>
    <string name="history_save_current">Save current progress</string>
    <string name="history_restart">Start over</string>
    <string name="history_save">Save</string>
    <string name="history_restore">Restore</string>
    <string name="history_cancel">Cancel</string>
    <string name="history_rename">Rename</string>
    <string name="history_delete">Delete</string>
    <string name="history_pin">Keep this save</string>
    <string name="history_unpin">Remove keep mark</string>
    <string name="history_auto">Automatic</string>
    <string name="history_manual">Manual</string>
...
